tests/miniJava/pos/001274_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { while ( 0 . java ( ) ) if ( 0 ) { } else { } } }
