tests/miniJava/neg/000167_mutation.MiniJava
class java { public static int void Main ( String [ ] java ) { { } } }
